# KXInfer

./: CMakeLists.txt  README.md  main.cpp
include/base/: alloc.h  base.h  buffer.h  cuda_config.h
include/op/: add.h  kernel_inference.h  layer.h  matmul.h  mha.h
include/tensor/: tensor.h
log/: KXInfer.INFO  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-205749.594896  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-212041.602707  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-212041.602708  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223147.627578  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223147.627579  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223216.627768  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223216.627769  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223234.627927  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223234.627929  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223325.628281  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223325.628282  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223549.629149  KXInfer.asus-System-Product-Name.asus.log.INFO.20250606-223549.629150  KXInfer.asus-System-Product-Name.asus.log.INFO.20250609-174106.568688  KXInfer.asus-System-Product-Name.asus.log.INFO.20250609-174106.568689  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210529.26341  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210529.26342  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210619.26695  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210621.26716  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210723.27137  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210723.27138  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210734.27216  KXInfer.asus-System-Product-Name.asus.log.INFO.20250610-210734.27217  KXInfer.asus-System-Product-Name.asus.log.INFO.20250616-154129.3446006  KXInfer.asus-System-Product-Name.asus.log.INFO.20250616-154129.3446007  KXInfer.asus-System-Product-Name.asus.log.INFO.20250616-154157.3446476  KXInfer.asus-System-Product-Name.asus.log.INFO.20250616-154157.3446477
src/base/: alloc.cpp  base.cpp  buffer.cpp
src/op/: add.cpp  layer.cpp  mha.cpp
src/op/kernel/: kernel_inference.cpp
src/op/kernel/cpu/: add_kernel.cpp  add_kernel.h
src/op/kernel/cuda/: add_kernel.cu  add_kernel.cuh
src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_base/: test_alloc.cpp  test_base.cpp  test_buffer.cpp
test/test_install/: test_math.cpp
test/test_op/: test_add.cpp
test/test_tensor/: test_tensor.cpp
test/utils/: utils.cu  utils.cuh
